// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`git csv should list ownership at the specific commit when a commit sha is provided: stderr 1`] = `""`;

exports[`git csv should list ownership at the specific commit when a commit sha is provided: stdout 1`] = `
".github/CODEOWNERS
.gitignore
.idea/codeStyles/codeStyleConfig.xml
.idea/github-codeowners.iml
.idea/inspectionProfiles/Project_Default.xml
.idea/jsLibraryMappings.xml
.idea/misc.xml
.idea/modules.xml
.idea/vcs.xml
README.md
package-lock.json
package.json
src/cli.ts,@jjmschofield
src/commands/audit.ts,@jjmschofield
src/commands/git.ts,@jjmschofield
src/commands/who.ts,@jjmschofield
src/lib/OwnedFile.ts,@jjmschofield
src/lib/OwnershipEngine.ts,@jjmschofield
src/lib/dir.ts,@jjmschofield
src/lib/stats.ts,@jjmschofield
src/lib/types.ts,@jjmschofield
src/lib/writers.ts,@jjmschofield
tsconfig.json
tslint.json
"
`;

exports[`git csv should list ownership of files changed between specific commits: stderr 1`] = `""`;

exports[`git csv should list ownership of files changed between specific commits: stdout 1`] = `
".circleci/config.yml
.gitignore
.idea/runConfigurations/test_int.xml
README.md
__mocks__/recursive-readdir.js
jest.config.js
package-lock.json
package.json
src/cli.ts,@jjmschofield
src/commands/__fixtures__/default/files.json,@jjmschofield
src/commands/__fixtures__/default/gitignore,@jjmschofield
src/commands/__fixtures__/default/gitignore-deep,@jjmschofield
src/commands/__fixtures__/default/index.ts,@jjmschofield
src/commands/__fixtures__/default/owners,@jjmschofield
src/commands/__fixtures__/project-builder.test.helper.ts,@jjmschofield
src/commands/__fixtures__/types.ts,@jjmschofield
src/commands/__snapshots__/audit.test.int.ts.snap,@jjmschofield
src/commands/audit.test.int.ts,@jjmschofield
src/lib/OwnedFile.ts,@jjmschofield
src/lib/OwnershipEngine.test.ts,@jjmschofield
src/lib/OwnershipEngine.ts,@jjmschofield
src/lib/dir.ts,@jjmschofield
src/lib/gitignore.test.ts,@jjmschofield
src/lib/gitignore.ts,@jjmschofield
src/lib/logger.ts,@jjmschofield
src/lib/writers.ts,@jjmschofield
tsconfig.json
tslint.json
"
`;

exports[`git jsonl should list ownership at the specific commit when a commit sha is provided: stderr 1`] = `""`;

exports[`git jsonl should list ownership at the specific commit when a commit sha is provided: stdout 1`] = `
"{\\"path\\":\\".github/CODEOWNERS\\",\\"owners\\":[]}
{\\"path\\":\\".gitignore\\",\\"owners\\":[]}
{\\"path\\":\\".idea/codeStyles/codeStyleConfig.xml\\",\\"owners\\":[]}
{\\"path\\":\\".idea/github-codeowners.iml\\",\\"owners\\":[]}
{\\"path\\":\\".idea/inspectionProfiles/Project_Default.xml\\",\\"owners\\":[]}
{\\"path\\":\\".idea/jsLibraryMappings.xml\\",\\"owners\\":[]}
{\\"path\\":\\".idea/misc.xml\\",\\"owners\\":[]}
{\\"path\\":\\".idea/modules.xml\\",\\"owners\\":[]}
{\\"path\\":\\".idea/vcs.xml\\",\\"owners\\":[]}
{\\"path\\":\\"README.md\\",\\"owners\\":[]}
{\\"path\\":\\"package-lock.json\\",\\"owners\\":[]}
{\\"path\\":\\"package.json\\",\\"owners\\":[]}
{\\"path\\":\\"src/cli.ts\\",\\"owners\\":[\\"@jjmschofield\\"]}
{\\"path\\":\\"src/commands/audit.ts\\",\\"owners\\":[\\"@jjmschofield\\"]}
{\\"path\\":\\"src/commands/git.ts\\",\\"owners\\":[\\"@jjmschofield\\"]}
{\\"path\\":\\"src/commands/who.ts\\",\\"owners\\":[\\"@jjmschofield\\"]}
{\\"path\\":\\"src/lib/OwnedFile.ts\\",\\"owners\\":[\\"@jjmschofield\\"]}
{\\"path\\":\\"src/lib/OwnershipEngine.ts\\",\\"owners\\":[\\"@jjmschofield\\"]}
{\\"path\\":\\"src/lib/dir.ts\\",\\"owners\\":[\\"@jjmschofield\\"]}
{\\"path\\":\\"src/lib/stats.ts\\",\\"owners\\":[\\"@jjmschofield\\"]}
{\\"path\\":\\"src/lib/types.ts\\",\\"owners\\":[\\"@jjmschofield\\"]}
{\\"path\\":\\"src/lib/writers.ts\\",\\"owners\\":[\\"@jjmschofield\\"]}
{\\"path\\":\\"tsconfig.json\\",\\"owners\\":[]}
{\\"path\\":\\"tslint.json\\",\\"owners\\":[]}
"
`;

exports[`git jsonl should list ownership of files changed between specific commits: stderr 1`] = `""`;

exports[`git jsonl should list ownership of files changed between specific commits: stdout 1`] = `
"{\\"path\\":\\".circleci/config.yml\\",\\"owners\\":[]}
{\\"path\\":\\".gitignore\\",\\"owners\\":[]}
{\\"path\\":\\".idea/runConfigurations/test_int.xml\\",\\"owners\\":[]}
{\\"path\\":\\"README.md\\",\\"owners\\":[]}
{\\"path\\":\\"__mocks__/recursive-readdir.js\\",\\"owners\\":[]}
{\\"path\\":\\"jest.config.js\\",\\"owners\\":[]}
{\\"path\\":\\"package-lock.json\\",\\"owners\\":[]}
{\\"path\\":\\"package.json\\",\\"owners\\":[]}
{\\"path\\":\\"src/cli.ts\\",\\"owners\\":[\\"@jjmschofield\\"]}
{\\"path\\":\\"src/commands/__fixtures__/default/files.json\\",\\"owners\\":[\\"@jjmschofield\\"]}
{\\"path\\":\\"src/commands/__fixtures__/default/gitignore\\",\\"owners\\":[\\"@jjmschofield\\"]}
{\\"path\\":\\"src/commands/__fixtures__/default/gitignore-deep\\",\\"owners\\":[\\"@jjmschofield\\"]}
{\\"path\\":\\"src/commands/__fixtures__/default/index.ts\\",\\"owners\\":[\\"@jjmschofield\\"]}
{\\"path\\":\\"src/commands/__fixtures__/default/owners\\",\\"owners\\":[\\"@jjmschofield\\"]}
{\\"path\\":\\"src/commands/__fixtures__/project-builder.test.helper.ts\\",\\"owners\\":[\\"@jjmschofield\\"]}
{\\"path\\":\\"src/commands/__fixtures__/types.ts\\",\\"owners\\":[\\"@jjmschofield\\"]}
{\\"path\\":\\"src/commands/__snapshots__/audit.test.int.ts.snap\\",\\"owners\\":[\\"@jjmschofield\\"]}
{\\"path\\":\\"src/commands/audit.test.int.ts\\",\\"owners\\":[\\"@jjmschofield\\"]}
{\\"path\\":\\"src/lib/OwnedFile.ts\\",\\"owners\\":[\\"@jjmschofield\\"]}
{\\"path\\":\\"src/lib/OwnershipEngine.test.ts\\",\\"owners\\":[\\"@jjmschofield\\"]}
{\\"path\\":\\"src/lib/OwnershipEngine.ts\\",\\"owners\\":[\\"@jjmschofield\\"]}
{\\"path\\":\\"src/lib/dir.ts\\",\\"owners\\":[\\"@jjmschofield\\"]}
{\\"path\\":\\"src/lib/gitignore.test.ts\\",\\"owners\\":[\\"@jjmschofield\\"]}
{\\"path\\":\\"src/lib/gitignore.ts\\",\\"owners\\":[\\"@jjmschofield\\"]}
{\\"path\\":\\"src/lib/logger.ts\\",\\"owners\\":[\\"@jjmschofield\\"]}
{\\"path\\":\\"src/lib/writers.ts\\",\\"owners\\":[\\"@jjmschofield\\"]}
{\\"path\\":\\"tsconfig.json\\",\\"owners\\":[]}
{\\"path\\":\\"tslint.json\\",\\"owners\\":[]}
"
`;

exports[`git simple should list ownership at the specific commit when a commit sha is provided: stderr 1`] = `""`;

exports[`git simple should list ownership at the specific commit when a commit sha is provided: stdout 1`] = `
".github/CODEOWNERS
.gitignore
.idea/codeStyles/codeStyleConfig.xml
.idea/github-codeowners.iml
.idea/inspectionProfiles/Project_Default.xml
.idea/jsLibraryMappings.xml
.idea/misc.xml
.idea/modules.xml
.idea/vcs.xml
README.md
package-lock.json
package.json
src/cli.ts	@jjmschofield
src/commands/audit.ts	@jjmschofield
src/commands/git.ts	@jjmschofield
src/commands/who.ts	@jjmschofield
src/lib/OwnedFile.ts	@jjmschofield
src/lib/OwnershipEngine.ts	@jjmschofield
src/lib/dir.ts	@jjmschofield
src/lib/stats.ts	@jjmschofield
src/lib/types.ts	@jjmschofield
src/lib/writers.ts	@jjmschofield
tsconfig.json
tslint.json
"
`;

exports[`git simple should list ownership of files changed between specific commits: stderr 1`] = `""`;

exports[`git simple should list ownership of files changed between specific commits: stdout 1`] = `
".circleci/config.yml
.gitignore
.idea/runConfigurations/test_int.xml
README.md
__mocks__/recursive-readdir.js
jest.config.js
package-lock.json
package.json
src/cli.ts	@jjmschofield
src/commands/__fixtures__/default/files.json	@jjmschofield
src/commands/__fixtures__/default/gitignore	@jjmschofield
src/commands/__fixtures__/default/gitignore-deep	@jjmschofield
src/commands/__fixtures__/default/index.ts	@jjmschofield
src/commands/__fixtures__/default/owners	@jjmschofield
src/commands/__fixtures__/project-builder.test.helper.ts	@jjmschofield
src/commands/__fixtures__/types.ts	@jjmschofield
src/commands/__snapshots__/audit.test.int.ts.snap	@jjmschofield
src/commands/audit.test.int.ts	@jjmschofield
src/lib/OwnedFile.ts	@jjmschofield
src/lib/OwnershipEngine.test.ts	@jjmschofield
src/lib/OwnershipEngine.ts	@jjmschofield
src/lib/dir.ts	@jjmschofield
src/lib/gitignore.test.ts	@jjmschofield
src/lib/gitignore.ts	@jjmschofield
src/lib/logger.ts	@jjmschofield
src/lib/writers.ts	@jjmschofield
tsconfig.json
tslint.json
"
`;
